# Reusable-Reproducible-Python-Documentation-Packaging-Continuous-Integration-and-Beyond

./: .flake8  .readthedocs.yml  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: conf.py  utils.rst
my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/iter_together/: utils.py
tests/: constants.py  f1.csv  f2.csv  test_utils.py
