
[metadata]
author = Anak Wannaphaschaiyong
author-email = awannaphasch2016@fau.edu
maintainer = Anak Wannaphaschaiyong

home-page = https://github.com/Awannaphasch2016
project_urls =
    Bug Tracker = https://github.com/awannaphasch2016/{project_name}/issues
    Changelog = https://github.com/awannaphasch2016/{project_name}/CHANGELOG.rst

long-description = file: README.rst
long_description_content_type = text/reStructuredTest

license = MIT
license-file = COPYING

platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    iteration
    file utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.0.*, >= 3.1.*, >= 3.2.*
test_suite = Tests
install_required =
    requests
    numpy
    pandas
    pybel

setup_requires =
    setuptools
# setuptools >=30.3.0     # minimal version for `setup.cfg`
# setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[options.extras_require]
dev =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
;    sphinx-click
testing =
    pytest
    coverage
ci =
 codacy-coverage
 codecov

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
# @abc.abstractmethod
# @abc.abstractproperty
# raise NotImplementedError
# return NotImplemented
# except ImportError
# raise MemoryError
# if __name__ == .__main__.:
# if typing.TYPE_CHECKING:

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
